# fullwidth

./: .gitignore  CMakeLists.txt  Makefile  README.md  fullwidth  makefile
doc/: fullwidth.1  fullwidth.md
src/: BunnySay.cpp  BunnySay.h  CMakeLists.txt  bunnysay.cc  bunnysay.h  fullwidth.cc  fullwidth.h  runbunnysay.cc  rune.cc  rune.h  runetests.cc  runfullwidth.cc
